[tool.poetry]
name = "meinbahn"
version = "0.1.0"
description = ""
authors = ["Joseph Bettenhausen <21023218+jbettenh@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
requests = "^2.27.1"
xmltodict = "^0.12.0"
fontawesomefree = "^6.1.1"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
