[tool.poetry]
name = "meinbahn"
version = "0.2.0"
description = ""
authors = ["Joseph Bettenhausen <21023218+jbettenh@users.noreply.github.com>"]

[tool.poetry.dependencies]
Django = "^4.0.6"
fontawesomefree = "^6.1.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
python = "^3.9"
python-dotenv = "^0.20.0"
requests = "^2.27.1"
xmltodict = "^0.12.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pre-commit = "^2.21.0"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
exclude = '''
(
  /(
    | \.git          # root of the project
    | \.github          # root of the project
    | \.venv
    | \.vscode
    | migrations
  )/
)
'''
force-exclude = '''
(
  /(
    | \.git          # root of the project
    | \.github          # root of the project
    | \.venv
    | \.vscode
    | migrations
  )/
)
'''
